--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 	<meta charset="UTF-8">
 	<title>My Menu</title>
 	<link type="text/css" rel="stylesheet" href="menu2.css">   
-	<link type="text/css" rel="stylesheet" href="Cells/degCol.css">   
 	<link type="text/css" rel="stylesheet" href="ChoixVisu/uploads.css">   
-	<link type="text/css" rel="stylesheet" href="Cells/degCol.css">  
+	<link type="text/css" rel="stylesheet" href="Cells/cells.css">  
 	<link type="text/css" rel="stylesheet" href="Histo/histo.css">  
 	<link type="text/css" rel="stylesheet" href="CellsHisto/cellHisto.css">   
 	<link type="text/css" rel="stylesheet" href="Circles/circles.css">   
@@ -23,7 +22,7 @@
 <script type="text/javascript" src="ParseData/parseRawData.js"></script>
 <script type="text/javascript" src="Circles/circles.js"></script>
 <script type="text/javascript" src="MatriceAdjacence/matAdj.js"></script>
-<script type="text/javascript" src="Cells/degCol5.js"></script>
+<script type="text/javascript" src="Cells/cells.js"></script>
 <script type="text/javascript" src="Histo/histo.js"></script>
 <script type="text/javascript" src="CellsHisto/cellHisto.js"></script>
 <script type="text/javascript" src="ParraCoord/ParrallelCoordProto.js"></script>
