--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <script type="text/javascript" src="fonction1.js"></script>
 <script type="text/javascript" src="../D3/d3.js"></script>
 <script type="text/javascript" src="Help/help.js"></script>
+<script type="text/javascript" src="infoCompFuncs/infoCompFuncs.js"></script>
 <script type="text/javascript" src="ChoixVisu/uploads.js"></script>
 <script type="text/javascript" src="ParseData/parseRawData.js"></script>
 <script type="text/javascript" src="Circles/circles.js"></script>
