--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
 	<link type="text/css" rel="stylesheet" href="menu2.css">   
 	<link type="text/css" rel="stylesheet" href="ChoixVisu/uploads.css">   
 	<link type="text/css" rel="stylesheet" href="Cells/cells.css">  
-	<link type="text/css" rel="stylesheet" href="Histo/histo.css">  
-	<link type="text/css" rel="stylesheet" href="CellsHisto/cellHisto.css">   
+	<link type="text/css" rel="stylesheet" href="Cells/cellHisto.css">   
+	<link type="text/css" rel="stylesheet" href="Histogramme/histo.css">  
 	<link type="text/css" rel="stylesheet" href="Circles/circles.css">   
-	<link type="text/css" rel="stylesheet" href="ParraCoord/parrallelCoord.css">
 	<link type="text/css" rel="stylesheet" href="MatriceAdjacence/matAdj.css">
 	<link type="text/css" rel="stylesheet" href="ObservAttributs/attributs.css">
 </head>
@@ -18,16 +17,14 @@
 <script type="text/javascript" src="fonction1.js"></script>
 <script type="text/javascript" src="../D3/d3.js"></script>
 <script type="text/javascript" src="Help/help.js"></script>
-<script type="text/javascript" src="infoCompFuncs/infoCompFuncs.js"></script>
 <script type="text/javascript" src="ChoixVisu/uploads.js"></script>
+<script type="text/javascript" src="infoCompFuncs/infoCompFuncs.js"></script>
 <script type="text/javascript" src="ParseData/parseRawData.js"></script>
 <script type="text/javascript" src="Circles/circles.js"></script>
-<script type="text/javascript" src="MatriceAdjacence/matAdj.js"></script>
 <script type="text/javascript" src="Cells/cells.js"></script>
-<script type="text/javascript" src="Histo/histo.js"></script>
-<script type="text/javascript" src="CellsHisto/cellHisto.js"></script>
-<script type="text/javascript" src="ParraCoord/ParrallelCoordProto.js"></script>
-<script type="text/javascript" src="ParraCoord/ParrallelCoordProto2.js"></script>
+<script type="text/javascript" src="Cells/cells2.js"></script>
+<script type="text/javascript" src="Cells/cellHisto.js"></script>
+<script type="text/javascript" src="Histogramme/histo.js"></script>
 <script type="text/javascript" src="ObservAttributs/attributs2Trans.js"></script>
 <script type="text/javascript" src="MatriceAdjacence/matAdj.js"></script>
 
