Change D3 directory place, + minors changes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
 <script type="text/javascript" src="fonction1.js"></script>
-<script type="text/javascript" src="../D3/d3.js"></script>
+<script type="text/javascript" src="D3/d3.js"></script>
 <script type="text/javascript" src="Help/help.js"></script>
 <script type="text/javascript" src="ChoixVisu/uploads.js"></script>
 <script type="text/javascript" src="infoCompFuncs/infoCompFuncs.js"></script>
